--- a/resources/scss/welcome.scss
+++ b/resources/scss/welcome.scss
@@ -1,4 +1,8 @@
 .welcome {
+    h1 {
+        line-height: 1;
+    }
+
     .top {
         background-image: url("../../public/img/home/students.jpg");
     }
