--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,4 +1,16 @@
+.welcome h1 {
+  line-height: 1;
+}
+
 .welcome .top {
   background-image: url(/images/students.jpg?73cf940005878cc1616bc2d107e4737b);
+}
+
+.courses h1 {
+  line-height: 1;
+}
+
+.courses .top {
+  background-image: url(/images/code-1839406_1920.jpg?a1e7089ef569e29428f8dc0c5fc0c65b);
 }
 
