--- a/resources/scss/custom.scss
+++ b/resources/scss/custom.scss
@@ -1,2 +1,6 @@
+//@import "breakpoints";
 @import "welcome";
 @import "courses";
+@import "course-card.css";
+@import "common.css";
+@import "buttons.css";
